feat: Add route management APIs including activation, deactivation, and CRUD operations